--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit
-pandas_datareader
-yfinance
-plotly
-tensorflow
-streamlit-extras
-pandas
-numpy
-netron
-scikit-learn
-requests
-Pillow
+streamlit==1.24.0
+pandas_datareader==0.10.0
+yfinance==0.2.26
+plotly==5.15.0
+tensorflow==2.13.0
+streamlit-extras==0.2.0
+pandas==2.0.2
+numpy==1.24.3
+netron==6.5.8
+scikit-learn==1.2.2
+requests==2.31.0
+Pillow==9.5.0
