--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,19 @@ netron==7.7.1
 scikit-learn==1.5.0
 requests==2.32.3
 Pillow==10.3.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.2
+streamlit-cookies-manager==0.2.0
+streamlit-datagrid==0.0.1
+streamlit-embedcode==0.1.2
+streamlit-faker==0.0.3
+streamlit-image-coordinates==0.1.6
+streamlit-keyup==0.2.4
+streamlit-login-auth-ui==0.2.0
+streamlit-lottie==0.0.5
+streamlit-on-Hover-tabs==1.0.1
+streamlit-option-menu==0.3.13
+streamlit-parameters==0.1.5
+streamlit-tensorboard==0.0.2
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
